--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,19 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>TradingTrial</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+
 </head>
 
 <body>
   <app-root></app-root>
-   
-   
+
+
 </body>
 
 </html>
